test/files/neg/t7623.check
t7623.scala:23: warning: A repeated case parameter or extracted sequence is not matched by a sequence wildcard (_*), and may fail at runtime.
  def g = "" match { case X(s, t) => }               // warn
                          ^
t7623.scala:25: warning: Sequence wildcard (_*) does not align with repeated case parameter or extracted sequence; the result may be unexpected.
  def h = "" match { case X(s, t, u @ _*) => }       // warn
                          ^
t7623.scala:11: warning: match may not be exhaustive.
It would fail on the following input: C(_, _)
  def f = C("") match { case C(s) => }
           ^
t7623.scala:13: warning: A repeated case parameter or extracted sequence is not matched by a sequence wildcard (_*), and may fail at runtime.
  def g = C("") match { case C(s, t) => }            // warn
                             ^
t7623.scala:13: warning: match may not be exhaustive.
It would fail on the following input: C(_, _)
  def g = C("") match { case C(s, t) => }            // warn
           ^
t7623.scala:15: warning: Sequence wildcard (_*) does not align with repeated case parameter or extracted sequence; the result may be unexpected.
  def h = C("") match { case C(s, t, u @ _*) => }    // warn
                             ^
t7623.scala:15: warning: match may not be exhaustive.
It would fail on the following input: C(_, _)
  def h = C("") match { case C(s, t, u @ _*) => }    // warn
           ^
error: No warnings can be incurred under -Werror.
7 warnings
1 error
